...
import androidx.compose.ui.graphics.vector.ImageVector

enum class NavigationItem(
    val title: String,
    val icon: ImageVector,
) {
    ALBUMS("Albums", Icons.Default.Album),
    ARTISTS("Artists", Icons.Default.Person),
    COLLECTIONS("Collections", Icons.Default.LibraryMusic)
}

@Composable
fun BottomNavigationBar(
    selectedTab: NavigationItem,
    onTabSelected: (NavigationItem) -> Unit
...
